# a-second-brain

./: .gitignore  README.md  pyproject.toml
asb/: dashboard.py  main.py
asb/brain/: agent.py  automation_graph.py  cognition.py  embeddings.py  graph.py  ingestion.py  insight_db.py  logger.py  memory.py  memory_compressor.py  reflection.py  research_agent.py  scheduler.py  self_evaluator.py
asb/brain/sources/: files_adapter.py  git_adapter.py  notion_adapter.py
